# pyqt_recorder

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  gitmojis.json  main.py  pyproject.toml  test.py
